Changes in banner image and add 2 image

--- a/css/style.css
+++ b/css/style.css
@@ -17764,6 +17764,8 @@ img{
 
 .contact-form .form-group input[type="text"],
 
+.contact-form .form-group input[type="number"],
+
 .contact-form .form-group input[type="password"],
 
 .contact-form .form-group input[type="tel"],
